done all main logic
