# application/backend/certiblock/docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/api/blockchain/all-objects": {
+            "get": {
+                "description": "Get all blockchain",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blockchain"
+                ],
+                "summary": "Get all blockchain",
+                "responses": {
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
         "/api/countries": {
             "get": {
                 "description": "Get all countries",
@@ -353,7 +373,7 @@
         },
         "/api/universities/certificate-file/approve": {
             "post": {
-                "description": "Add a certificate file",
+                "description": "Duyệt một chứng chỉ và đưa lên blockchain",
                 "consumes": [
                     "application/json"
                 ],
@@ -361,23 +381,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "universities"
+                    "Certificates"
                 ],
-                "summary": "Add a certificate file",
+                "summary": "Duyệt certificate lên blockchain",
                 "parameters": [
                     {
-                        "description": "Certificate file data",
-                        "name": "certificateFile",
+                        "description": "Thông tin duyệt certificate",
+                        "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/data.CertificateFileUpload"
+                            "$ref": "#/definitions/data.BlockchainCertificateOutput"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -387,13 +407,25 @@
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
                     }
                 }
             }
         },
         "/api/universities/certificate-file/request": {
             "post": {
-                "description": "Add a certificate file",
+                "description": "Student issue a certificate file",
                 "consumes": [
                     "application/json"
                 ],
@@ -403,7 +435,7 @@
                 "tags": [
                     "universities"
                 ],
-                "summary": "Add a certificate file",
+                "summary": "Student issue a certificate file",
                 "parameters": [
                     {
                         "description": "Certificate file data",
@@ -572,10 +604,39 @@
         }
     },
     "definitions": {
+        "data.BlockchainCertificateOutput": {
+            "type": "object",
+            "properties": {
+                "certHash": {
+                    "type": "string"
+                },
+                "certUUID": {
+                    "type": "string"
+                },
+                "dateOfIssuing": {
+                    "type": "string"
+                },
+                "studentPK": {
+                    "type": "string"
+                },
+                "studentSignature": {
+                    "type": "string"
+                },
+                "universityPK": {
+                    "type": "string"
+                },
+                "universitySignature": {
+                    "type": "string"
+                }
+            }
+        },
         "data.CertificateFileOutput": {
             "type": "object",
             "properties": {
                 "cert_uuid": {
+                    "type": "string"
+                },
+                "date_of_issue": {
                     "type": "string"
                 },
                 "is_on_chain": {
@@ -587,10 +648,16 @@
                 "student_public_key": {
                     "type": "string"
                 },
-                "universityPublicKey": {
+                "student_signature": {
                     "type": "string"
                 },
                 "university_name": {
+                    "type": "string"
+                },
+                "university_public_key": {
+                    "type": "string"
+                },
+                "university_signature": {
                     "type": "string"
                 }
             }
@@ -700,7 +767,7 @@
         "data.StudentAuth": {
             "type": "object",
             "properties": {
-                "privateKey": {
+                "publicKey": {
                     "type": "string"
                 }
             }
@@ -759,6 +826,9 @@
         "data.UniversityInput": {
             "type": "object",
             "properties": {
+                "description": {
+                    "type": "string"
+                },
                 "location": {
                     "type": "string"
                 },
@@ -766,6 +836,12 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "privateKey": {
+                    "type": "string"
+                },
+                "publicKey": {
                     "type": "string"
                 }
             }
